[package]
name = "c8common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
#chip8_base.workspace = true
tap.workspace = true
getset = "0.1.2"
miette = { version = "5.3.0", features = ["fancy"] }
thiserror = "1.0.37"
#c8asm = { path = "../c8asm", features = ["proc"] }
