[package]
name = "c8int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_base.workspace = true
c8common.path = "../c8common"
c8asm-proc.path = "../c8asm-proc"
log.workspace = true
simplelog = "0.12.0"
tap.workspace = true
