[package]
name = "c8int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
egui = ["dep:egui"]

[dependencies]
chip8_base.workspace = true
log.workspace = true
simplelog = "0.12.0"
tap.workspace = true
rand = "0.8.5"
clap = { version = "4.0.18", features = ["derive"] }

[dependencies.c8common]
path = "../c8common"
features = ["proc-assembler"]

[dependencies.egui]
version = "0.19.0"
optional = true
