[package]
name = "c8int"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tap.workspace = true
rand = "0.8.5"
c8asm = { path = "../c8asm" }

[dependencies.c8common]
path = "../c8common"
