[package]
name = "c8runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c8common = { path = "../c8common" }
c8hooks = { path = "../c8hooks" }
c8int = { path = "../c8int" }
pixels = "0.9.0"
winit = "0.27.2"
winit_input_helper = "0.13.0"
crossbeam = "0.8.1"
cpal = "0.14"
anyhow = "1"
log = "0.4"
simplelog = "0.12.0"
clap = { version = "4.0.18", features = ["derive"] }

we like making changes
I pretend that I can code to get a work placement but in reality I cannot

Let's make another change woohoo